[package]
name = "radpool-dlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dlc = { git = "https://github.com/p2pderivatives/rust-dlc" , features = ["use-serde"] }
bitcoin-rpc-provider = { git = "https://github.com/p2pderivatives/rust-dlc" }
dlc-manager = { git = "https://github.com/p2pderivatives/rust-dlc"  , features = ["use-serde", "parallel"]}
dlc-messages = { git = "https://github.com/p2pderivatives/rust-dlc" }
dlc-sled-storage-provider = { git = "https://github.com/p2pderivatives/rust-dlc" }
p2pd-oracle-client = { git = "https://github.com/p2pderivatives/rust-dlc" }

tokio = {version = "1.5", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = {version = "0.4.19", features = ["serde"]}


lightning = {version = "0.0.125"}
lightning-net-tokio = {version = "0.0.125" }


